// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconZoomOut /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconZoomOut /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconZoomOut /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconZoomOut /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconZoomOut /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconZoomOut /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconZoomOut /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M237.8 219.8l-66-66.1c10-13.8 15.9-30.8 15.9-49.2 0-46.3-37.7-84-83.9-84s-83.9 37.7-83.9 84 37.7 84 83.9 84c18.8 0 36.2-6.2 50.2-16.7l65.9 66 17.9-18zm-134-52.2c-34.8 0-63.1-28.3-63.1-63.1S69 41.3 103.8 41.3s63.1 28.3 63.1 63.1-28.4 63.2-63.1 63.2zM150 96v18H59V96h91z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
